--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
     </div>
 </section>
 <section id="skills">
+    <div style="position: absolute; top: 0px; left: -45%;">
     <h2 style="margin-left: 100px; margin-top: 100px;">My Skills</h2>
-    <div class="myskills">
+    </div>
+    <div class="myskills" style="margin-left: 2%;">
         <div style="width: 33%; text-align: center;">
             <div class="skilltitle">Back-end</div>
             <div class="skills-container">
@@ -168,31 +170,33 @@
     </div>
 </section>
 <section id="portfolio">
+    <div style="position: absolute; top: 0px; left: -45%;">
     <h2 style="margin-left: 100px; margin-top: 100px;">My Projects</h2>
-    <div style="display: flex; justify-content: space-around; gap: 10px; margin-top: 400px;a">
+    </div>
+    <div style="display: flex; justify-content: space-around; gap: 10px; margin-top: 400px;">
         <a href="https://github.com/ljh01067/mypro" target="_blank" style="flex: 1; padding: 10px; text-align: center;">
-            <img src="https://velog.velcdn.com/images/leejh01067/post/07615e80-5ebc-4e2f-bae0-ee4a126c1c7d/image.png" alt="PriceCheck" style="height: 210px; width: 420px;">
+            <img src="https://velog.velcdn.com/images/leejh01067/post/07615e80-5ebc-4e2f-bae0-ee4a126c1c7d/image.png" alt="PriceCheck" style="width: 100%; height: auto; aspect-ratio: 217 / 122; object-fit: cover;">
             <div>
                 오프라인 마트 간의 가격비교 사이트<br>
                 GitHub 바로가기 (링크)
             </div>
         </a>
         <a href="https://github.com/TailsRoute/TailsRoute_PJ" target="_blank" style="flex: 1; padding: 10px; text-align: center;">
-            <img src="https://velog.velcdn.com/images/leejh01067/post/81888a4e-81e9-4f77-a94f-62f7748a7f52/image.png" alt="TailsRoute" style="height: 210px; width: 420px;">
+            <img src="https://velog.velcdn.com/images/leejh01067/post/81888a4e-81e9-4f77-a94f-62f7748a7f52/image.png" alt="TailsRoute" style="height: auto; width: 100%;">
             <div>
                 반려견과 함께하는 행복한 생활을 위한 통합 플랫폼<br>
                 GitHub 바로가기 (링크)<br>
             </div>
         </a>
         <a href="https://github.com/ljh01067/24_09_todoapp" target="_blank" style="flex: 1; padding: 10px; text-align: center;">
-            <img src="https://velog.velcdn.com/images/leejh01067/post/1485c420-67da-4c69-bc7f-eb08134b964b/image.png" alt="TodoApp" style="height: 210px; width: 420px;">
+            <img src="https://velog.velcdn.com/images/leejh01067/post/1485c420-67da-4c69-bc7f-eb08134b964b/image.png" alt="TodoApp" style="height: auto; width: 100%;">
             <div>
                 할 일을 관리하는 일정 앱<br>
                 GitHub 바로가기 (링크)<br>
             </div>
         </a>
         <a href="https://github.com/ljh01067/ljh01067.github.io" target="_blank" style="flex: 1; padding: 10px; text-align: center;">
-            <img src="https://velog.velcdn.com/images/leejh01067/post/a8df092d-e551-4861-aa3d-0035f4407557/image.png" alt="portfolio" style="height: 210px; width: 420px;">
+            <img src="https://velog.velcdn.com/images/leejh01067/post/a8df092d-e551-4861-aa3d-0035f4407557/image.png" alt="portfolio" style="height: auto; width: 100%;">
             <div>
                 이준혁의 웹 포트폴리오<br>
                 GitHub 바로가기 (링크)<br>
@@ -201,8 +205,10 @@
     </div>
 </section>
 <section id="contact">
+    <div style="position: absolute; top: 0px; left: -45%;">
     <h2 style="margin-left: 100px; margin-top: 100px;">
         Contact</h2>
+    </div>
     <div class="container">
         <div class="block"></div>
         <form id="contactForm">
