--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </div>
     <div style="display: flex; justify-content: space-around; gap: 10px; margin-top: 400px;">
         <a href="https://github.com/ljh01067/mypro" target="_blank" style="flex: 1; padding: 10px; text-align: center;">
-            <img src="https://velog.velcdn.com/images/leejh01067/post/07615e80-5ebc-4e2f-bae0-ee4a126c1c7d/image.png" alt="PriceCheck" style="width: 100%; height: auto; aspect-ratio: 217 / 122; object-fit: cover;">
+            <img src="https://velog.velcdn.com/images/leejh01067/post/7b761c4b-5037-41c2-b6c9-a07c84e210d6/image.png" alt="PriceCheck" style="height: auto; width: 100%">
             <div>
                 오프라인 마트 간의 가격비교 사이트<br>
                 GitHub 바로가기 (링크)
@@ -234,7 +234,7 @@
             <div class="row">
                 <label for="exampleMessage">Message</label>
                 <textarea class="u-full-width" style="height: 400px;" placeholder="내용을 입력해주세요" name="body" required></textarea>
-                <button type="submit" class="button-primary">Submit</button>
+                <button type="submit" class="button-primary" style="border-radius: 5px;">Submit</button>
             </div>
         </form>
     </div>
