--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
     <div>
         <div style="font-size: 1.5rem; color: #bbb1d6; font-weight: bold;">교육과정</div>
         <div>
-            코리아IT아카데미 Python과정 | 2024-03-13 ~ 2024-05-09<br>
-            코리아IT아카데미 DBMS과정 | 2024-03-23 ~ 2024-04-14<br>
             프롬프트 AI & Open API & 공공데이터를 활용한 웹/앱 개발자 양성 과정<br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| 2024-05-28 ~ 2024-12-16<br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| 출석 우수상 <a href="https://www.notion.so/AI-Open-API-158fd2c8ca848072b3c4c6bbb43b9bc5?pvs=4" target="_blank">(링크)</a>
-            <br><br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| 출석 우수상 <a href="https://www.notion.so/AI-Open-API-158fd2c8ca848072b3c4c6bbb43b9bc5?pvs=4" target="_blank">(링크)</a><br>
+            코리아IT아카데미 DBMS과정 | 2024-03-23 ~ 2024-04-14<br>
+            코리아IT아카데미 Python과정 | 2024-03-13 ~ 2024-05-09<br>
+            <br>
         </div>
         <div style="font-size: 1.5rem; color: #bbb1d6; font-weight: bold;">학력</div>
         <div>
